--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
   },
   "main": "./lib/index.js",
   "dependencies": {
-    "assert-plus": "0.1.5",
+    "assert-plus": "^1.0.0",
     "async": "~0.9.0",
     "backoff": "^2.4.1",
     "bunyan": "^1.2.3",
     "clone": "0.1.8",
-    "ufds": "~1.1.2",
-    "lru-cache": "2.3.0",
     "libuuid": "0.1.4",
+    "lru-cache": "2.3.0",
     "once": "^1.3.1",
     "restify": "git://github.com/joyent/node-restify.git#fd5d5b5",
+    "smartdc-auth": "2.1.6",
+    "ufds": "~1.1.2",
     "vasync": "^1.6.2",
-    "verror": "^1.6.0",
-    "smartdc-auth": "2.1.6"
+    "verror": "^1.6.0"
   },
   "devDependencies": {
     "ldap-filter": "^0.3.1",
